--- a/package.json
+++ b/package.json
@@ -4,31 +4,35 @@
 	"private": true,
 	"homepage": "https://mattise.dev",
 	"dependencies": {
-		"@material-ui/core": "^4.11.1",
-		"@material-ui/icons": "^4.9.1",
-		"@material-ui/lab": "^4.0.0-alpha.56",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.60",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^12.1.0",
+		"@testing-library/user-event": "^13.2.1",
 		"clsx": "^1.1.1",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-scripts": "4.0.1",
-		"web-vitals": "^0.2.4",
-		"workbox-background-sync": "^5.1.3",
-		"workbox-broadcast-update": "^5.1.3",
-		"workbox-cacheable-response": "^5.1.3",
-		"workbox-core": "^5.1.3",
-		"workbox-expiration": "^5.1.3",
-		"workbox-google-analytics": "^5.1.3",
-		"workbox-navigation-preload": "^5.1.3",
-		"workbox-precaching": "^5.1.3",
-		"workbox-range-requests": "^5.1.3",
-		"workbox-routing": "^5.1.3",
-		"workbox-strategies": "^5.1.3",
-		"workbox-streams": "^5.1.3"
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router": "^5.2.1",
+		"react-router-dom": "^5.3.0",
+		"react-scripts": "4.0.3",
+		"web-vitals": "^2.1.0",
+		"workbox-background-sync": "^6.3.0",
+		"workbox-broadcast-update": "^6.3.0",
+		"workbox-cacheable-response": "^6.3.0",
+		"workbox-core": "^6.3.0",
+		"workbox-expiration": "^6.3.0",
+		"workbox-google-analytics": "^6.3.0",
+		"workbox-navigation-preload": "^6.3.0",
+		"workbox-precaching": "^6.3.0",
+		"workbox-range-requests": "^6.3.0",
+		"workbox-routing": "^6.3.0",
+		"workbox-strategies": "^6.3.0",
+		"workbox-streams": "^6.3.0"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "npx gh-pages -b master -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
