--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,25 @@
 {
-  "short_name": "Mattise",
-  "name": "Nicholas Mattise Portfolio Site",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logos/mattise_logo_web_192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logos/mattise_logo_web_512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#01579b",
-  "background_color": "#ffffff"
+	"short_name": "Mattise",
+	"name": "Nicholas Mattise Portfolio Site",
+	"icons": [
+		{
+			"src": "favicon.ico",
+			"sizes": "64x64 32x32 24x24 16x16",
+			"type": "image/x-icon"
+		},
+		{
+			"src": "logos/mtns_grey_192.png",
+			"type": "image/png",
+			"sizes": "192x192"
+		},
+		{
+			"src": "logos/mtns_grey_512.png",
+			"type": "image/png",
+			"sizes": "512x512"
+		}
+	],
+	"start_url": ".",
+	"display": "standalone",
+	"theme_color": "#01579b",
+	"background_color": "#ffffff"
 }
